<resources>
  <!--  Sensing SDK-->
  <string
        name="overheat_dialog_title"
    >Wait until the phone is not too hot before proceeding</string>
  <string
        name="overheat_dialog_message"
    >Check that the camera area is no longer hot, before resuming the session.</string>
  <string
        name="overheat_ok_to_proceed"
    >I have checked it is safe to proceed</string>
  <!--  Sensing SDK-->
  <string name="app_name">Sensory</string>
  <string name="screening">Screening</string>
  <string name="data_collection_app">Data Collection App</string>
  <string name="steps_summary">There are 3 steps</string>
  <string name="step_record_video_ppg">Record video of PPG</string>
  <string name="step_photo_fingernails">Photo of fingernails</string>
  <string name="step_photo_conjunctiva">Photo of conjunctiva (eye lid)</string>
  <string name="start_new_participant">Start new participant</string>
  <string name="participant_id_title">Enter participant ID</string>
  <string name="participant_id">Participant ID</string>
  <string name="cancel">Cancel</string>
  <string name="next">Next</string>
  <string name="step1">Step 1</string>
  <string name="step1_title">Record video of finger/toe over camera</string>
  <string
        name="step1_instruction1"
    >Place the participant\'s finger or toe over the rear camera.</string>
  <string
        name="step1_instruction2"
    >The participant\'s finger should cover the entire camera.</string>
  <string name="step1_instruction3">Record for 30 seconds.</string>
  <string
        name="video_recording_instruction"
    >Place their fingertip over the entire back camera</string>
  <string name="recording_ppg">Recording PPG</string>
  <string
        name="error_dialog_message"
    >Make sure you hold steady during measurement</string>
  <string name="start_again">Start again</string>
  <string name="help">Help and feedback</string>
  <string name="ppg_video_complete">PPG video complete!</string>
  <string
        name="replace_ppg_video"
    >If there was an issue while recording, click here to replace the video</string>
  <string name="step2">Step 2</string>
  <string
        name="step2_instruction1"
    >Place participant\'s fingers together such that nails are clearly visible</string>
  <string name="take_photo">Take photo</string>
  <string
        name="ensure_one_hand"
    >Make sure there is only one hand in the photo</string>
  <string
        name="photo_fingernails_instruction"
    >Position fingernails so all nails are visible</string>
  <string name="photo_fingernail_complete">Fingernail photo complete!</string>
  <string
        name="replace_photo"
    >If the photo is blurry or has another issue, click to try again</string>
  <string name="step3">Step 3</string>
  <string
        name="step3_instruction1"
    >Place participant\'s fingers together such that nails are clearly visible.</string>
  <string name="step4">Step 4</string>
  <string
        name="step4_instruction1"
    >Gently pull the lower eyelid of the participant and place camera in front of it.</string>
  <string
        name="photo_conjunctiva_instruction"
    >Gently pull the lower eyelid of the participant and take photo</string>
  <string name="conjunctiva_photo_complete">Conjunctiva photo complete!</string>
  <string name="finish">Finish</string>
  <string name="done_message">You\'re all done for this participant!</string>
  <string name="start_next_participant">Start next participant</string>
  <string name="start_recording">Start Recording</string>
  <string name="stop_recording">Stop Recording</string>
  <string name="participant_id_error">Please enter valid participant ID</string>
  <string name="acknowledge">I acknowledge</string>
  <string name="acknowledge_dialog_title">Research use only</string>
  <string
        name="acknowledge_dialog_message"
    >This is a research mobile app developed by Google. This app is intended for research use only and is not intended for clinical use of any kind, including but not limited to diagnosis or prognosis.</string>
  <string
        name="permission_error_dialog_title"
    >Unable to get permissions.</string>
  <string
        name="permission_error_dialog_message"
    >Please reinstall the app</string>

  <!--  From FHIR demo-->
  <string name="submit">Submit</string>
  <string name="add_patient">Add Patient</string>
  <string
        name="cancel_questionnaire_message"
    >Are you sure you want to discard the answers?</string>
  <string name="inputs_missing">Inputs are missing.</string>
  <string name="resources_saved">Resources are saved.</string>
  <string name="last_sync">Last sync</string>
  <string name="sync_menu">Sync</string>
  <!--  From FHIR demo-->
</resources>
