<?xml version="1.0" encoding="utf-8" ?>
<!--
 Copyright 2024 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="contentDescription"
    android:background="@android:color/white"
>

  <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_margin_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_margin_guideline"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toTopOf="@id/top_margin_guideline"
    >

    <ImageView
            android:id="@+id/iv_ppg"
            android:layout_width="235dp"
            android:layout_height="260dp"
            android:layout_marginTop="9dp"
            android:src="@drawable/measure_ppg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ppg_instructions_title"
            tools:src="@drawable/ic_launcher_background"
        />
    <TextView
            android:id="@+id/tv_step1_instruction1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/step1_instruction1"
            android:textAppearance="@style/text_style"
            app:drawableStartCompat="@drawable/one_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_ppg"
        />
    <TextView
            android:id="@+id/tv_step1_instruction2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/step1_instruction2"
            android:textAppearance="@style/text_style"
            app:drawableStartCompat="@drawable/two_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step1_instruction1"
        />
    <TextView
            android:id="@+id/tv_step1_instruction3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/step1_instruction3"
            android:textAppearance="@style/text_style"
            app:drawableStartCompat="@drawable/three_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step1_instruction2"
        />
    <TextView
            android:id="@+id/tv_ppg_instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/step1_title"
            android:textAppearance="@style/title_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step1"
        />
    <TextView
            android:id="@+id/tv_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/step1"
            android:textAppearance="@style/text_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

    <include
            layout="@layout/layout_instructions_cancel_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step1_instruction3"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"
    />

  <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
    />

  <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
    />

  <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
